--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "slugify": "^1.6.6",
+    "twilio": "^5.10.6",
     "zod": "^4.1.12",
     "zod-validation-error": "^4.0.2"
   },
